# agentic-ai

./: .gitignore  .mcpignore  .repo_map  AGENTIC_INFRASTRUCTURE_SPECS.md  AGENTIC_INFRASTRUCTURE_SPECS_V2.md  AGENTIC_INFRASTRUCTURE_SPECS_V3_M3ULTRA.md  AGENTIC_INFRASTRUCTURE_SPECS_V4_ULTRA.md  AGENTIC_INFRASTRUCTURE_SPECS_V5_MLX.md  AGENTIC_INFRASTRUCTURE_SPECS_V6_MASTER.md  AGENT_PLAN.md  NOTES.md  PROMPT_TEMPLATES.md  README.md  RESEARCH_KIMI_VS_DEEPSEEK.md  REVIEW_REPORT.md  SPEC.md  SWARM_EXECUTION_REPORT.md  VALIDATION_7.md  agent.db  agentic_loop.py  generate_repo_map.py  hive_memory.py  mcp_agentic_loop.py  mcp_custom_directory_creator.py  mcp_custom_file_writer.py  mcp_multi_server_loop.py  mcp_sdd_swarm.py  mcp_server_bash.py  mcp_server_ddg.py  mcp_server_diff.py  mcp_server_vision.py  mcp_swarm_loop.py  test_mcp_multi_server_loop.py  test_mcp_sdd_swarm.py  test_mcp_server_diff.py  test_mcp_server_vision.py  test_mlx.py  test_sdd_swarm_orchestrator.py  test_vision_server.py
agents/: architect-critic.md  architect.md  architecture-reviewer.md  build-validator.md  claude-code.md  code-formatter.md  config-validator.md  consensus-builder.md  critical-reviewer-github.md  developer.md  devops-automation-engineer.md  documentation.md  error-investigator.md  example-agent-chaining.md  general-purpose.md  low-latency-engineer.md  migration-planner.md  mutation-tester.md  ollama-code-reviewer.md  orchestrator.md  pipeline-orchestrator.md  quality-reviewer.md  quant-analyst.md  regression-guardian.md  (+18 more)
test_python_skills/: .ruff.toml  mypy.ini  pyproject.toml
(+156 files in other folders)
